objects/Required_Learning_Category__c.object
<CustomObject>
    <description>Created By :- Veeresh Alur
Date: 27-Feb-14
Capability: ES Social Learning Platform
Release: 2
Description: Required Learning Category</description>
    <fields>
        <fullName>Display_Sequence_Nbr__c</fullName>
        <label>Display Sequence Nbr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Learning_Board_Template_ID__c</fullName>
        <label>Learning Board Template ID</label>
        <referenceTo>Learning_Board_Template__c</referenceTo>
        <relationshipLabel>Required Learning Categories</relationshipLabel>
        <relationshipName>Required_Learning_Categories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Learning_Category_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learning Category Id</label>
        <referenceTo>Learning_Category__c</referenceTo>
        <relationshipLabel>Required Learning Categories</relationshipLabel>
        <relationshipName>Required_Learning_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Required Learning Category</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Learning_Board_Template_ID__c</columns>
        <columns>Learning_Category_Id__c</columns>
        <columns>Display_Sequence_Nbr__c</columns>
        <columns>Is_Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>RLC-{00000000}</displayFormat>
        <label>Required Learning Category ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Required Learning Categories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>